adding config of mongodb

--- a/mongo-jakarta/src/main/resources/application.properties
+++ b/mongo-jakarta/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 # configure the mongoDB client for a replica set of two nodes
-quarkus.mongodb.connection-string = mongodb://mongo1:27017,mongo2:27017
+quarkus.jnosql.document.mydatabase.provider = mongodb
+quarkus.jnosql.document.mydatabase.mongodb.connection-string = mongodb://localhost:27017
+quarkus.jnosql.document.mydatabase.database = mydatabase
